--- a/final/styles.css
+++ b/final/styles.css
@@ -6,13 +6,18 @@
 
 body {
   font-family: "Inter", sans-serif;
+  background-color: #e9edf3;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px rgb(8, 251, 255, 0.5);
 }
 
 .container {
   width: 900px;
   height: 100%;
   margin: 0 auto;
-  padding-bottom: 150px;
   background-color: #f5f5f5;
 }
 
@@ -23,36 +28,40 @@ body {
 .nav__container {
   display: flex;
   justify-content: space-between;
-  background-color: #dfdede;
+  background-color: #214f85;
   align-items: center;
   padding: 20px 40px;
 }
-
-.content__container {
-  width: 700px;
-  margin: 0 auto;
+h3 {
+  color: #fff;
 }
-
 .nav_items {
   display: flex;
-  gap: 15px;
+  font-size: 18px;
+  letter-spacing: 1.1px;
+  gap: 50px;
   list-style: none;
 }
 
 .nav_item:link,
 .nav_item:visited {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 
 .nav_item:hover,
 .nav_item:active {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #fff;
 }
 
 /************************* 
         HEADER  
 **************************/
+
+.content__container {
+  width: 700px;
+  margin: 0 auto;
+}
 
 .title__container {
   margin-top: 40px;
@@ -91,8 +100,12 @@ h1 {
 **************************/
 
 .form__container {
-  margin-top: 80px;
-  padding: 0px 50px;
+  margin: 80px auto;
+  width: 700px;
+  padding: 36px 50px 48px 50px;
+  border-radius: 36px;
+  background-color: #214f85;
+  color: #fff;
 }
 
 h2 {
@@ -100,31 +113,41 @@ h2 {
 }
 
 form {
-  margin-top: 20px;
+  padding: 12px 84px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
 }
 
 input {
-  padding: 8px 6px;
+  padding: 8px 12px;
   margin-top: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  height: 44px;
+  border: none;
+  box-shadow: 5px 3px 10px rgb(0, 0, 0, 0.1);
 }
 
 input:focus {
-  outline: 1px solid #444;
+  outline: none;
 }
+
 .form_button {
   padding: 10px 20px;
-  margin-top: 15px;
-  border: 1px solid #000;
+  margin-top: 5px;
+  height: 44px;
+  border: 1px solid #fff;
   font-weight: 700;
   background-color: #fff;
+  color: #214f85;
+  box-shadow: 5px 3px 10px rgb(0, 0, 0, 0.1);
   transition: all 0.2s;
 }
 
 .form_button:hover {
   cursor: pointer;
   color: #fff;
-  background-color: #444;
+  border: 1px solid #142f50;
+  background-color: #142f50;
 }
